pkg/lang/testdata/ub/types/valid/optional-open.ub
optional(open(object({
  retries: integer,
})))
