pkg/lang/testdata/ub/types/invalid/open-twice.ub
open(open(object({ a: string })))
